# Pinc2

./: .clang-tidy  .gitignore  CMakeLists.txt  build.md  build.zig  build.zig.zon  contributing.md  license  pinc-original.h  readme.md  roadmap.md  security.md  settings.md  support.md  todo.md
MinGW/: README_IMPORTANT.md  stdlib.h  string.h  winnt.h
MinGW/sys/: types.h
examples/: 0_window.c  1_multi_init.c  2_opengl.c  3_share_context.c  4_events.c  example.h  readme.md
ext/: readme.md
ext/SDL2/: SDL_thread.h
ext/WIN32/: pinc_win32.h
include/: pinc.h  pinc_opengl.h
src/: arena.c  arena.h  pinc_arena.c  pinc_arena.h  pinc_error.h  pinc_main.c  pinc_main.h  pinc_options.h  pinc_sdl2.c  pinc_sdl2.h  pinc_sdl2load.h  pinc_types.h  pinc_window.h  pstring.h  sdl2.c  sdl2.h  sdl2load.h  unitybuild.c  window.h
src/libs/: dynamic_allocator.h  pinc_allocator.h  pinc_arena.c  pinc_arena.h  pinc_string.c  pinc_string.h  pinc_utf8.c  pinc_utf8.h  pstring.c  pstring.h  readme.md
src/platform/: pinc_platform.c  pinc_platform.h  pinc_platform_posix.c.inc  pinc_platform_win32.c.inc  platform.c  platform.h  platform_posix.c.inc  platform_win32.c.inc
